// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpreadSheetController (e2e) cell not found 1`] = `
{
  "error": "Not Found",
  "message": "Cell not found",
  "statusCode": 404,
}
`;

exports[`SpreadSheetController (e2e) comples update case 1`] = `
{
  "a": {
    "result": "4",
    "value": "4",
  },
  "b": {
    "result": "3",
    "value": "3",
  },
  "c": {
    "result": "7",
    "value": "=a+b",
  },
  "d": {
    "result": "12",
    "value": "=b*a",
  },
  "e": {
    "result": "19",
    "value": "=c + d",
  },
}
`;

exports[`SpreadSheetController (e2e) complex circular reference 1`] = `
{
  "error": "Unprocessable Entity",
  "message": "Circular reference found",
  "statusCode": 422,
}
`;

exports[`SpreadSheetController (e2e) complex circular reference 2`] = `
{
  "a": {
    "result": "2",
    "value": "2",
  },
  "b": {
    "result": "3",
    "value": "=a + 1",
  },
  "c": {
    "result": "5",
    "value": "=b + 2",
  },
  "d": {
    "result": "9",
    "value": "=c + 4",
  },
  "e": {
    "result": "6",
    "value": "=b + 3",
  },
  "f": {
    "result": "20",
    "value": "=d + 5 + e",
  },
}
`;

exports[`SpreadSheetController (e2e) complicated case 1`] = `
{
  "a": {
    "result": "2",
    "value": "2",
  },
  "b": {
    "result": "3",
    "value": "3",
  },
  "c": {
    "result": "5",
    "value": "=a+b",
  },
  "d": {
    "result": "6",
    "value": "=b*a",
  },
  "e": {
    "result": "11",
    "value": "=c + d",
  },
}
`;

exports[`SpreadSheetController (e2e) get single cell 1`] = `
{
  "result": "test",
  "value": "test",
}
`;

exports[`SpreadSheetController (e2e) self reference 1`] = `
{
  "error": "Unprocessable Entity",
  "message": "Self reference is not allowed",
  "statusCode": 422,
}
`;

exports[`SpreadSheetController (e2e) self reference 2`] = `
{
  "a": {
    "result": "2",
    "value": "2",
  },
  "b": {
    "result": "3",
    "value": "3",
  },
}
`;

exports[`SpreadSheetController (e2e) should update deps 1`] = `
{
  "a": {
    "result": "2",
    "value": "2",
  },
  "b": {
    "result": "3",
    "value": "=a + 1",
  },
  "c": {
    "result": "11",
    "value": "=e + 5",
  },
  "d": {
    "result": "15",
    "value": "=c + 4",
  },
  "e": {
    "result": "6",
    "value": "=b + 3",
  },
  "f": {
    "result": "26",
    "value": "=d + 5 + e",
  },
}
`;

exports[`SpreadSheetController (e2e) simple case 1`] = `
{
  "var1": {
    "result": "2",
    "value": "2",
  },
  "var2": {
    "result": "3",
    "value": "3",
  },
  "var3": {
    "result": "5",
    "value": "=var1+var2",
  },
}
`;

exports[`SpreadSheetController (e2e) simple circular reference 1`] = `
{
  "error": "Unprocessable Entity",
  "message": "Circular reference found",
  "statusCode": 422,
}
`;

exports[`SpreadSheetController (e2e) simple circular reference 2`] = `
{
  "a": {
    "result": "3",
    "value": "=b",
  },
  "b": {
    "result": "3",
    "value": "3",
  },
}
`;

exports[`SpreadSheetController (e2e) simple update case 1`] = `
{
  "a": {
    "result": "test",
    "value": "test",
  },
  "b": {
    "result": "3",
    "value": "3",
  },
}
`;

exports[`SpreadSheetController (e2e) wrong reference value 1`] = `
{
  "error": "Unprocessable Entity",
  "message": "a is referenced in formula but cannot be parsed",
  "statusCode": 422,
}
`;
